--- a/views/pages/blog.jade
+++ b/views/pages/blog.jade
@@ -1,1 +1,45 @@
-h2 Blog
+#content
+	.blog-feature
+		a(href='#/blog/2014/4/25-epoch-exordium')
+			h3 Langenium - Epoch Exordium
+		p Epoch Exordium is an RPG short set in a network of space stations that were built by an AI
+		a(href='#/blog/2014/4/25-epoch-exordium').img
+			img(src='./assets/content/feature1.png')
+	.blog-item
+		a(href='#/blog/2014/4/18-article2')
+			h3 Pancetta beef ham hock chuck
+		a(href='#/blog/2014/4/18-article2').push-right
+			img(src='./assets/content/thumb2.jpg')
+		.time 12th of April 2014 19:00
+		p Kielbasa leberkas chuck filet mignon tenderloin landjaeger frankfurter fatback bacon short loin ball tip jerky. Meatball bacon beef ribs fatback. Filet mignon brisket shankle meatball, kevin kielbasa venison biltong.
+	.blog-item
+		a(href='#/blog/2014/4/18-article2')
+			h3 Pancetta beef ham hock chuck
+		a(href='#/blog/2014/4/18-article2').push-left
+			img(src='./assets/content/thumb3.png')
+		.time 11th of April 2014 09:00
+		p Turducken bresaola chicken, capicola short loin sirloin pork loin ground round spare ribs pancetta kielbasa jowl bacon ribeye chuck. Rump frankfurter strip steak corned beef bacon, andouille venison sirloin porchetta chicken. 
+	.blog-item
+		a(href='#/blog/2014/4/18-article2')
+			h3 Pancetta beef ham hock chuck
+		a(href='#/blog/2014/4/18-article2').push-right
+			img(src='./assets/content/thumb4.jpg')
+		.time 27th of March 2014 19:00
+		p Kielbasa leberkas chuck filet mignon tenderloin landjaeger frankfurter fatback bacon short loin ball tip jerky. Meatball bacon beef ribs fatback. Filet mignon brisket shankle meatball, kevin kielbasa venison biltong.
+#sidebar
+	.blog-item
+		a(href='#/blog/2014/4/18-article2')
+			h3 Pancetta beef ham hock chuck
+		.time 18th of April 2014 09:00
+	.blog-item
+		a(href='#/blog/2014/4/18-article2')
+			h3 Pancetta beef ham hock chuck
+		.time 12th of April 2014 19:00
+	.blog-item
+		a(href='#/blog/2014/4/18-article2')
+			h3 Pancetta beef ham hock chuck
+		.time 11th of April 2014 09:00
+	.blog-item
+		a(href='#/blog/2014/4/18-article2')
+			h3 Pancetta beef ham hock chuck
+		.time 27th of March 2014 19:00
