--- a/styles/shared/defaults.styl
+++ b/styles/shared/defaults.styl
@@ -15,9 +15,8 @@ mPhone = 'screen and (max-width: 768px)'
 h1 
 	margin 0
 	float left
-h1, h2
-	letter-spacing .025em
-h3, h4, h5, h6
-	letter-spacing .01em
+h1, h2, h3, h4, h5, h6
+	letter-spacing .05em
+
 h1, h2, h3, h4, h5, h6
 	font-family 'Franchise'
