--- a/views/pages/home.jade
+++ b/views/pages/home.jade
@@ -1,1 +1,49 @@
-h2 Home
+#content.home
+	.slideshow
+		.slide
+			a(href='#/blog/2014/4/25-epoch-exordium')
+				h3 Langenium - Epoch Exordium
+			p Epoch Exordium is an RPG short set in a network of space stations that were built by an AI
+			a(href='#/blog/2014/4/25-epoch-exordium').img
+				img(src='./assets/content/feature1.png')
+		.slide
+			a(href='#/blog/2014/4/25-staging-server')
+				h3 Introducing the Staging Server
+			p I've held off on deploying the latest code to keep the website up. The staging server gives a 2nd option
+			a(href='#/blog/2014/4/25-staging-server').img
+				img(src='./assets/content/feature2.jpg')
+		.slide
+			a(href='#/blog/2014/4/11-langenium-characters')
+				h3 Langenium Character Roster (Draft 2)
+			p More storyline characters. I've got my main cast, so I'll probably start working on proper bodies soon 
+			a(href='#/blog/2014/4/11-langenium-characters').img
+				img(src='./assets/content/feature3.png')
+#sidebar.home
+	.blog-item
+		a(href='#/blog/2014/4/18-article2')
+			h3 Pancetta beef ham hock chuck
+		a(href='#/blog/2014/4/18-article2').push-left
+			img(src='./assets/content/thumb1.jpg')
+		.time 18th of April 2014 09:00
+		p Turducken bresaola chicken, capicola short loin sirloin pork loin ground round spare ribs pancetta kielbasa jowl bacon ribeye chuck. Rump frankfurter strip steak corned beef bacon, andouille venison sirloin porchetta chicken. 
+	.blog-item
+		a(href='#/blog/2014/4/18-article2')
+			h3 Pancetta beef ham hock chuck
+		a(href='#/blog/2014/4/18-article2').push-right
+			img(src='./assets/content/thumb2.jpg')
+		.time 12th of April 2014 19:00
+		p Kielbasa leberkas chuck filet mignon tenderloin landjaeger frankfurter fatback bacon short loin ball tip jerky. Meatball bacon beef ribs fatback. Filet mignon brisket shankle meatball, kevin kielbasa venison biltong.
+	.blog-item
+		a(href='#/blog/2014/4/18-article2')
+			h3 Pancetta beef ham hock chuck
+		a(href='#/blog/2014/4/18-article2').push-left
+			img(src='./assets/content/thumb3.png')
+		.time 11th of April 2014 09:00
+		p Turducken bresaola chicken, capicola short loin sirloin pork loin ground round spare ribs pancetta kielbasa jowl bacon ribeye chuck. Rump frankfurter strip steak corned beef bacon, andouille venison sirloin porchetta chicken. 
+	.blog-item
+		a(href='#/blog/2014/4/18-article2')
+			h3 Pancetta beef ham hock chuck
+		a(href='#/blog/2014/4/18-article2').push-right
+			img(src='./assets/content/thumb4.jpg')
+		.time 27th of March 2014 19:00
+		p Kielbasa leberkas chuck filet mignon tenderloin landjaeger frankfurter fatback bacon short loin ball tip jerky. Meatball bacon beef ribs fatback. Filet mignon brisket shankle meatball, kevin kielbasa venison biltong.
