--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -42,9 +42,16 @@ body {
   font-size: 75%;
   color: #fff;
 }
+.dg.ac {
+  z-index: 1 !important;
+}
+#viewport > * {
+  z-index: 1;
+  position: relative;
+}
 body > canvas {
   position: fixed;
-  z-index: -1;
+  z-index: 0;
 }
 h1 {
   float: left;
