- Blog content is in - Forgot to mentiont that basic page transitions are in as of last commit

--- a/views/pages/home.jade
+++ b/views/pages/home.jade
@@ -7,43 +7,46 @@
 			a(href='#/blog/2014/04/11-epoch-exordium').img
 				img(src='./assets/content/feature1.png')
 		.slide
+			a(href='#/blog/2014/04/12-langenium-characters')
+				h3 MMO Character Roster (Draft 2)
+			p More storyline characters. I've got my main cast, so I'll probably start working on proper bodies soon 
+			a(href='#/blog/2014/04/12-langenium-characters').img
+				img(src='./assets/content/feature3.png')
+		.slide
 			a(href='#/blog/2014/04/25-staging-server')
 				h3 Introducing the Staging Server
 			p I've held off on deploying the latest code to keep the website up. The staging server gives a 2nd option
 			a(href='#/blog/2014/04/25-staging-server').img
 				img(src='./assets/content/feature2.jpg')
-		.slide
-			a(href='#/blog/2014/04/11-langenium-characters')
-				h3 Langenium Character Roster (Draft 2)
-			p More storyline characters. I've got my main cast, so I'll probably start working on proper bodies soon 
-			a(href='#/blog/2014/04/11-langenium-characters').img
-				img(src='./assets/content/feature3.png')
 #sidebar.home
 	.blog-item
-		a(href='#/blog/2014/04/18-article2')
-			h3 Pancetta beef ham hock chuck
-		a(href='#/blog/2014/04/18-article2').push-left
-			img(src='./assets/content/thumb1.jpg')
-		.time 18th of April 2014 09:00
-		p Turducken bresaola chicken, capicola short loin sirloin pork loin ground round spare ribs pancetta kielbasa jowl bacon ribeye chuck. Rump frankfurter strip steak corned beef bacon, andouille venison sirloin porchetta chicken. 
+		a(href='#/blog/2014/04/25-staging-server')
+			h3 Introducing the Staging Server
+		a(href='#/blog/2014/04/25-staging-server').push-left
+			img(src='./assets/content/thumb5.png')
+		.time 25th of April 2014 
+		p I've held off on deploying the latest code to keep the website up. The staging server gives a 2nd option
+	br
 	.blog-item
-		a(href='#/blog/2014/04/18-article2')
-			h3 Pancetta beef ham hock chuck
-		a(href='#/blog/2014/04/18-article2').push-right
-			img(src='./assets/content/thumb2.jpg')
-		.time 12th of April 2014 19:00
-		p Kielbasa leberkas chuck filet mignon tenderloin landjaeger frankfurter fatback bacon short loin ball tip jerky. Meatball bacon beef ribs fatback. Filet mignon brisket shankle meatball, kevin kielbasa venison biltong.
+		a(href='#/blog/2014/04/12-langenium-characters')
+			h3 MMO Character Roster (Draft 2)
+		a(href='#/blog/2014/04/12-langenium-characters').push-right
+			img(src='./assets/content/thumb7.png')
+		.time 12th of April 2014 
+		p More storyline characters. I've got my main cast, so I'll probably start working on proper bodies soon 
+	br
 	.blog-item
-		a(href='#/blog/2014/04/18-article2')
-			h3 Pancetta beef ham hock chuck
-		a(href='#/blog/2014/04/18-article2').push-left
+		a(href='#/blog/2014/04/11-epoch-exordium')
+			h3 Langenium - Epoch Exordium
+		a(href='#/blog/2014/04/11-epoch-exordium').push-left
 			img(src='./assets/content/thumb3.png')
-		.time 11th of April 2014 09:00
-		p Turducken bresaola chicken, capicola short loin sirloin pork loin ground round spare ribs pancetta kielbasa jowl bacon ribeye chuck. Rump frankfurter strip steak corned beef bacon, andouille venison sirloin porchetta chicken. 
+		.time 11th of April 2014 
+		p Epoch Exordium is an RPG short set in a network of space stations that were built by an AI
+	br
 	.blog-item
-		a(href='#/blog/2014/04/18-article2')
-			h3 Pancetta beef ham hock chuck
-		a(href='#/blog/2014/04/18-article2').push-right
+		a(href='#/blog/2014/03/27-texture-work')
+			h3 Texture work
+		a(href='#/blog/2014/03/27-texture-work').push-right
 			img(src='./assets/content/thumb4.jpg')
-		.time 27th of March 2014 19:00
-		p Kielbasa leberkas chuck filet mignon tenderloin landjaeger frankfurter fatback bacon short loin ball tip jerky. Meatball bacon beef ribs fatback. Filet mignon brisket shankle meatball, kevin kielbasa venison biltong.
+		.time 27th of March 2014 
+		p Working on textures so I can immediately go into creating the space station models and interiors.
