- Cleaned up some stuff that won't be used for a long time - Created title screen scene for MMO - Need to develop logo for Epoch Exordium

--- a/views/index.jade
+++ b/views/index.jade
@@ -57,6 +57,14 @@ html
 			include shaders/cloud.vert
 		script(type='x-shader/x-vertex', id='cloudFragShader')
 			include shaders/cloud.frag
+		script(type='x-shader/x-vertex', id='logoWaterVertShader')
+			include shaders/logo-water.vert
+		script(type='x-shader/x-vertex', id='logoWaterFragShader')
+			include shaders/logo-water.frag
+		script(type='x-shader/x-vertex', id='logoMetalVertShader')
+			include shaders/logo-metal.vert
+		script(type='x-shader/x-vertex', id='logoMetalFragShader')
+			include shaders/logo-metal.frag
 		script(type='x-shader/x-vertex', id='waterVertShader')
 			include shaders/water.vert
 		script(type='x-shader/x-vertex', id='waterFragShader')
