Using static socket.io.js

--- a/views/index.jade
+++ b/views/index.jade
@@ -47,7 +47,7 @@ html
 		// http://momentjs.com/
 		script(src="scripts/vendor/moment.min.js")
 		// http://socket.io/
-		script(src="scripts/vendor/socket.io.js")
+		script(src="socket.io/socket.io.js")
 		// Shaders
 		script(type='x-shader/x-vertex', id='haloVertShader')
 			include shaders/halo.vert
