- Added sun shader - Male mesh exists but it sucks :( Going to stick with sprite characters   until I get my character modelling skills in order

--- a/views/index.jade
+++ b/views/index.jade
@@ -65,6 +65,10 @@ html
 			include shaders/logo-metal.vert
 		script(type='x-shader/x-vertex', id='logoMetalFragShader')
 			include shaders/logo-metal.frag
+		script(type='x-shader/x-vertex', id='sunVertShader')
+			include shaders/sun.vert
+		script(type='x-shader/x-vertex', id='sunFragShader')
+			include shaders/sun.frag
 		script(type='x-shader/x-vertex', id='waterVertShader')
 			include shaders/water.vert
 		script(type='x-shader/x-vertex', id='waterFragShader')
