- Tweaking sun effects - Created clear function for scenes, begun thinking about how to structure   and refactor stuff - Moved scene startups into /director folder - Beginning to work on animation_queue, which will be available to all   scenes as a way to queue effects. All the shader stuff will probably   route through that, and the uniforms will be shifted into an effects   preset object. - Character-Test scene added, with helper arrows and going to work on cube   based sprite character

--- a/views/index.jade
+++ b/views/index.jade
@@ -78,5 +78,9 @@ html
 		script(src="scripts/scenograph.js")
 		script(src="scripts/scenograph/objects.js")
 		script(src="scripts/scenograph/stats.js")
+		script(src="scripts/scenograph/director/character_test.js")
+		script(src="scripts/scenograph/director/epochexordium.js")
+		script(src="scripts/scenograph/director/mmo.js")
+		script(src="scripts/scenograph/director/mmo_title.js")
 		script(src="scripts/client.js")
 		
