--- a/views/index.jade
+++ b/views/index.jade
@@ -38,6 +38,7 @@ html
 		script(src="scripts/vendor/jquery.cycle2.min.js")
 		// https://github.com/mrdoob/three.js
 		script(src="scripts/vendor/three.min.js")
+		script(src="scripts/vendor/threex.keyboardstate.js")
 		script(src="scripts/vendor/Mirror.js")
 		script(src="scripts/vendor/OrbitControls.js")
 		// https://code.google.com/p/dat-gui/
