- Working with THREEx Planets extension - Made some tiny changes - Got selection of planets and sun working - Object sizes are now to scale with AU measurements

--- a/views/index.jade
+++ b/views/index.jade
@@ -39,6 +39,7 @@ html
 		// https://github.com/mrdoob/three.js
 		script(src="scripts/vendor/three.min.js")
 		script(src="scripts/vendor/threex.keyboardstate.js")
+		script(src="scripts/vendor/threex.planets.js")
 		script(src="scripts/vendor/Mirror.js")
 		script(src="scripts/vendor/OrbitControls.js")
 		// https://code.google.com/p/dat-gui/
