- Room is working thanks to the fantastic Constructive Solid Geometry   plugin - https://github.com/chandlerprall/ThreeCSG - Now working on room details including window (might use water effect for   window material as that'll look sexy) - Will see if I can then refactor this up into a method and re-use on the   solar system scene.

--- a/views/index.jade
+++ b/views/index.jade
@@ -42,6 +42,8 @@ html
 		script(src="scripts/vendor/threex.planets.js")
 		script(src="scripts/vendor/Mirror.js")
 		script(src="scripts/vendor/OrbitControls.js")
+		// https://github.com/chandlerprall/ThreeCSG
+		script(src="scripts/vendor/ThreeCSG.js")
 		// https://code.google.com/p/dat-gui/
 		script(src="scripts/vendor/dat.gui.js")
 		// http://smoothiecharts.org/examples/example1.html
