- More water tweaks

--- a/views/index.jade
+++ b/views/index.jade
@@ -42,6 +42,7 @@ html
 		script(src="scripts/vendor/threex.planets.js")
 		script(src="scripts/vendor/Mirror.js")
 		script(src="scripts/vendor/OrbitControls.js")
+		script(src="scripts/vendor/WaterShader.js")
 		// https://github.com/chandlerprall/ThreeCSG
 		script(src="scripts/vendor/ThreeCSG.js")
 		// https://code.google.com/p/dat-gui/
@@ -86,5 +87,6 @@ html
 		script(src="scripts/scenograph/director/epochexordium.js")
 		script(src="scripts/scenograph/director/mmo.js")
 		script(src="scripts/scenograph/director/mmo_title.js")
+		script(src="scripts/scenograph/director/other_water.js")
 		script(src="scripts/client.js")
 		
