- Created second GUI panel, this one is for individual scene controls. - Will need to find a way to hide and show it - Created round room shape - Now onto getting the sandbox scene controls up and running - Would be great to make functionality to merge and move objects...

--- a/styles/styles.styl
+++ b/styles/styles.styl
@@ -24,6 +24,10 @@ body
 .dg.ac
 	z-index 1!important
 
+.dg li.chart:not(.closed) {
+  height: 100px;
+}
+
 #viewport > *
 	z-index 1
 	position relative
