--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -48,6 +48,9 @@ body {
 .dg.ac {
   z-index: 1 !important;
 }
+.dg li.chart:not(.closed) {
+  height: 100px;
+}
 #viewport > * {
   z-index: 1;
   position: relative;
