- Various changes, saving here before commencing new phase of work - integrating ThreeJS r67

--- a/views/index.jade
+++ b/views/index.jade
@@ -37,7 +37,7 @@ html
 		// http://jquery.malsup.com/cycle2/api/
 		script(src="scripts/vendor/jquery.cycle2.min.js")
 		// https://github.com/mrdoob/three.js
-		script(src="scripts/vendor/three.min.js")
+		script(src="scripts/vendor/three.js")
 		script(src="scripts/vendor/cannon.js")
 		script(src="scripts/vendor/Three.BufferGeometryUtils.js")
 		script(src="scripts/vendor/threex.keyboardstate.js")
