- Looks like basic bindings are in place, but content code needs way more   work

--- a/views/index.jade
+++ b/views/index.jade
@@ -86,6 +86,7 @@ html
 			include shaders/water.frag
 		// Client code
 		script(src="scripts/L.js")
+		script(src="scripts/content.js")
 		script(src="scripts/scenograph.js")
 		script(src="scripts/scenograph/objects.js")
 		script(src="scripts/scenograph/stats.js")
@@ -94,5 +95,6 @@ html
 		script(src="scripts/scenograph/director/epochexordium.js")
 		script(src="scripts/scenograph/director/mmo.js")
 		script(src="scripts/scenograph/director/mmo_title.js")
+		script(src="scripts/socket.js")
 		script(src="scripts/client.js")
 		
