--- a/views/pages/media.jade
+++ b/views/pages/media.jade
@@ -5,16 +5,16 @@
 	.push-left
 		a(href='#/media/concept-art')
 			h3 Concept art
-		img(src='./assets/content/thumb1.jpg')
+		img(src='./content/thumb1.jpg')
 	.push-left
 		a(href='#/media/game-assets')
 			h3 Game assets
-		img(src='./assets/content/thumb4.jpg')
+		img(src='./content/thumb4.jpg')
 	.push-left
 		a(href='#/media/screenshots')
 			h3 Screenshots
-		img(src='./assets/content/thumb5.png')
+		img(src='./content/thumb5.png')
 	.push-left
 		a(href='#/media/videos')
 			h3 Videos
-		img(src='./assets/content/thumb6.png')
+		img(src='./content/thumb6.png')
