--- a/views/pages/games.jade
+++ b/views/pages/games.jade
@@ -1,10 +1,10 @@
 #content
 	a(href='#/games/epoch-exordium')
 		h3 Epoch Exordium (Alpha)
-		img(src='./assets/content/feature1.png')
+		img(src='./content/feature1.png')
 	a(href='#/games/mmo')
 		h3 Langenium MMO Preview 
-		img(src='./assets/content/feature2.jpg')
+		img(src='./content/feature2.jpg')
 #sidebar
 	h3 Prototypes
 	p Rapidly developed experiments for new functionality
