--- a/views/pages/games.jade
+++ b/views/pages/games.jade
@@ -1,11 +1,11 @@
-#content
-	a(href='#/games/epoch-exordium')
-		h3 Epoch Exordium (Alpha)
-		img(src='./content/feature1.png')
-	a(href='#/games/mmo')
-		h3 Langenium MMO Preview 
-		img(src='./content/feature2.jpg')
-#sidebar
+#content.games
+	h3 Epoch Exordium (Alpha)
+	a(href='#/games/epoch-exordium').title
+		img(src='./content/blog/2014/04/11-epoch-exordium.png')
+	h3 Langenium MMO Preview 
+	a(href='#/games/mmo').title
+		img(src='./content/blog/2014/04/25-staging-server.jpg')
+#sidebar.games
 	h3 Prototypes
 	p Rapidly developed experiments for new functionality
 	ul
