--- a/views/pages/media.jade
+++ b/views/pages/media.jade
@@ -9,11 +9,11 @@
 	.push-left
 		a(href='#/media/game-assets')
 			h3 Game assets
-		img(src='./content/thumb4.jpg')
+		img(src='./content/blog/2014/03/27-texture-work-thumb.jpg')
 	.push-left
 		a(href='#/media/screenshots')
 			h3 Screenshots
-		img(src='./content/thumb5.png')
+		img(src='./content/blog/2014/04/25-staging-server-thumb.png')
 	.push-left
 		a(href='#/media/videos')
 			h3 Videos
